# diatagma

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/skills/diatagma/: skill.md
.claude/skills/diatagma/references/: user-preferences.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
.specs/: .gitignore  DIA-009-mcp-server.story.md  DIA-010-web-dashboard.story.md  DIA-011-core-library-epic.epic.md  DIA-012-mcp-server-epic.epic.md  DIA-014-typed-dependencies.story.md  DIA-015-ready-query.story.md  DIA-016-multi-agent-coordination.story.md  DIA-017-agents-md.story.md  DIA-018-file-watcher.story.md  DIA-019-archive-summaries.story.md  DIA-020-cli.story.md  DIA-021-lifecycle-automation.story.md  DIA-022-dashboard-ux-design.story.md  ROADMAP.md  changelog.md
.specs/archive/: DIA-001-pydantic-models.story.md  DIA-003-task-store.story.md  DIA-004-sqlite-cache.story.md  DIA-006-priority-scoring.story.md  DIA-007-changelog.story.md  DIA-008-config-loader.story.md  DIA-009-mcp-server.story.md  DIA-011-core-library-epic.epic.md  DIA-012-mcp-server-epic.epic.md  DIA-014-typed-dependencies.story.md  DIA-015-ready-query.story.md  DIA-017-agents-md.story.md  DIA-018-file-watcher.story.md  DIA-023-rename-sprint-to-cycle.story.md  DIA-024-roadmap-generation.story.md
.specs/config/: cycles.yaml  hooks.yaml  priority.yaml  schema.yaml
.specs/config/templates/: bug.md  epic.md
.tasks/: DIA-001-pydantic-models.story.md  DIA-002-frontmatter-parser.md  DIA-002-frontmatter-parser.story.md  DIA-003-task-store.story.md  DIA-004-sqlite-cache.story.md  DIA-005-dependency-graph.story.md  DIA-006-priority-scoring.story.md  DIA-007-changelog.story.md  DIA-008-config-loader.story.md  DIA-009-mcp-server.md  DIA-009-mcp-server.story.md  DIA-010-web-dashboard.md  DIA-010-web-dashboard.story.md  DIA-011-core-library-epic.epic.md  DIA-011-core-library-epic.md  DIA-012-mcp-server-epic.epic.md  DIA-012-mcp-server-epic.md  DIA-013-web-dashboard-epic.epic.md  DIA-014-typed-dependencies.story.md  DIA-015-ready-query.story.md  DIA-016-multi-agent-coordination.story.md  DIA-017-agents-md.story.md  DIA-018-file-watcher.story.md  DIA-019-archive-summaries.story.md  DIA-020-cli.story.md  DIA-021-lifecycle-automation.story.md  DIA-022-dashboard-ux-design.story.md  DIA-023-rename-sprint-to-cycle.story.md  ROADMAP.md
.tasks/archive/: DIA-001-pydantic-models.story.md  DIA-002-frontmatter-parser.story.md  DIA-003-task-store.story.md  DIA-004-sqlite-cache.story.md  DIA-005-dependency-graph.story.md  DIA-006-priority-scoring.story.md  DIA-007-changelog.story.md  DIA-008-config-loader.story.md
.tasks/config/: prefixes.yaml  schema.yaml  settings.yaml  sprints.yaml
.tasks/config/templates/: bug.md  default.md  epic.md  spike.md  story.md
docs/: architecture.md  developing.md  spec.md
docs/adr/: 001-use-fastmcp-over-official-sdk.md  002-litestar-over-fastapi.md  003-react-vite-frontend.md  template.md
docs/research/: 260327_mcp-framework-comparison.md
src/diatagma/: __init__.py  cli.py
src/diatagma/cli/: __init__.py  app.py  output.py  state.py
src/diatagma/cli/commands/: archive.py  graph.py  init.py  renumber.py  roadmap.py  server.py  spec.py  validate.py
src/diatagma/core/: __init__.py  agents_md.py  cache.py  changelog.py  config.py  context.py  duplicates.py  graph.py  lifecycle.py  models.py  next.py  parser.py  priority.py  roadmap.py  schema.py  search.py  store.py  watcher.py
src/diatagma/mcp/: __init__.py  prompts.py  resources.py  server.py  tools.py
src/diatagma/web/: __init__.py  app.py
src/diatagma/web/routes/: __init__.py  api.py  board.py  tasks.py
src/diatagma/web/templates/: base.html  board.html  graph.html  list.html  task.html
tests/: conftest.py  test_agents_md.py  test_cache.py  test_changelog.py  test_cli.py  test_config.py  test_duplicates.py  test_graph.py  test_lifecycle.py  test_mcp.py  test_mcp_tools.py  test_models.py  test_next.py  test_parser.py  test_priority.py  test_roadmap.py  test_store.py  test_summary.py  test_watcher.py  test_web_routes.py
